kubernetes/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: canister
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: api
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: canister
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: harbor-bot
      containers:
      - name: api
        image: tale.me/canister/api:2.4.0
        ports:
        - name: api
          containerPort: 3000
