kubernetes/clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: canister
spec:
  ports:
    - port: 8123
      targetPort: 8123
  selector:
    app: com.tale.canister.clickhouse
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
  namespace: canister
spec:
  replicas: 1
  selector:
    matchLabels:
      app: com.tale.canister.clickhouse
  template:
    metadata:
      labels:
        app: com.tale.canister.clickhouse
    spec:
      restartPolicy: Always
      containers:
      - name: clickhouse
        image: clickhouse/clickhouse-server:latest
        ports:
        - name: clickhouse
          containerPort: 8123
        volumeMounts:
        - name: clickhouse
          mountPath: /docker-entrypoint-initdb.d/
        - name: data
          mountPath: /var/lib/clickhouse
        - name: logs
          mountPath: /var/log/clickhouse-server
      volumes:
      - name: clickhouse
        configMap:
          name: clickhouse
          items:
            - key: migration.sql
              path: migration.sql
      - name: data
        persistentVolumeClaim:
          claimName: clickhouse
      - name: logs
        persistentVolumeClaim:
          claimName: clickhouse-logs
