kubernetes/vector.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector
  namespace: canister
spec:
  ports:
    - port: 8687
      targetPort: 8687
  selector:
    app: com.tale.canister.vector
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector
  namespace: canister
spec:
  replicas: 1
  selector:
    matchLabels:
      app: com.tale.canister.vector
  template:
    metadata:
      labels:
        app: com.tale.canister.vector
    spec:
      restartPolicy: Always
      containers:
      - name: vector
        image: timberio/vector:0.29.X-distroless-libc
        ports:
        - name: vector
          containerPort: 8687
        volumeMounts:
        - name: vector
          mountPath: /etc/vector
        livenessProbe:
          httpGet:
            path: /health
            port: 8686
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8686
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: vector
        configMap:
          name: vector
          items:
          - key: vector.toml
            path: vector.toml
