kubernetes/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: canister
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: com.tale.canister.grafana
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: canister
spec:
  replicas: 1
  selector:
    matchLabels:
      app: com.tale.canister.grafana
  template:
    metadata:
      labels:
        app: com.tale.canister.grafana
    spec:
      restartPolicy: Always
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - name: grafana
          containerPort: 3000
        volumeMounts:
        - name: dashboards
          mountPath: /var/lib/grafana
      volumes:
      - name: dashboards
        persistentVolumeClaim:
          claimName: grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: canister
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: dash.canister.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - 'dash.canister.me'
      secretName: grafana-tls
