kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: canister
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
    - host: api.canister.me
      http:
        paths:
          - pathType: Prefix
            path: /v2(/|$)(.*)
            backend:
              service:
                name: api
                port:
                  number: 3000
  tls:
    - hosts:
        - 'api.canister.me'
      secretName: api-tls
